Fix pin assignment

--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -24,11 +24,12 @@ build_flags =
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ${pins.vspi32}
-    ;-D TFT_DC=5    ; Defined by board, don't redefine !!
-    ;-D TFT_CS=26   ; Defined by board, don't redefine !!
-    ;-D TFT_RST=-1  ; Defined by board, don't redefine !!
-    -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=17  ; (can also be 22 or 16)
+    ; The board already defines the macros for the TFT connector
+    ;-D TFT_DC=27   ; Defined by board, don't redefine !!
+    ;-D TFT_CS=14   ; Defined by board, don't redefine !!
+    ;-D TFT_RST=33  ; Defined by board, don't redefine !!
+    -D TFT_BCKL=32  ; Configurable via web UI (default 32)
+    -D TOUCH_CS=12  ; Default for TFT connector
 ;endregion
 
 ;region -- Library options -------------------------------
