--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -1,88 +1,84 @@
-; MIT License - Copyright (c) 2020 Francis Van Roie
-; For full license information read the LICENSE file in the project folder
-;
-; Copy this file and rename it to platformio_override.ini
-; ONLY edit platformio_override.ini to make local changes to the parameters
+; USAGE: Copy this file and rename it to platformio_override.ini
 ;
 ; The platformio_override.ini file is not overwritten or monitored by git
+; ONLY edit platformio_override.ini to make local changes to the parameters
 
 [platformio]
 extra_configs =
-; Uncomment the following line to show all User Setups in the PIO sidebar
+	; Uncomment or edit the lines to show more User Setups in the PIO sidebar
     ; user_setups/esp32/*.ini
     ; user_setups/esp8266/*.ini
     ; user_setups/stm32f4xx/*.ini
-
+    
 [override]
 ; -- Hasp config options --------------------------------------
 build_flags =
-; -- Use settings from file user_config_override.h
+; -- Uncomment the next line to use the file src/user_config_override.h settings
 ;    -DUSE_CONFIG_OVERRIDE
 
+;region -- Default Build Environments : Used when Build All ---
 extra_default_envs =
-    ;my_custom_build
     ; Comment unneeded environments or create extra
-    ;esp32dev-mrb3511
-    ;d1mini-lolintft24
-    ;d1mini32-lolintft24
-    ;lolind32pro-lolintft24
-    ;esp12e-st7735
-    ;d132-unoshield
-    ;nodemcu32s-raspi
-    ;esp32dev-ili9488
+    ; d1-mini-esp32_ili9341
+    ; d1-mini-esp8266_ili9341
+    ; lolind32pro-lolintft24
+    ; esp32dev-mrb3511
+    ; esp12e-st7735
+    ; d132-unoshield
+    ; nodemcu32s-raspi
+    ; esp32dev-ili9488
+    ; my_custom_build
+;endregion
 
-; -- Define COM ports for each environment --------------------
+;region -- Define your local COM ports for each environment ---
 [env:d1-mini-esp32_ili9341]
-upload_port = COM6      ; Change to the correct port
-monitor_port = COM6     ; Change to the correct port
+monitor_port = COM6       ; Change to the correct port
+upload_port = ${env:d1-mini-esp32_ili9341.monitor_port}
 
 [env:d1-mini-esp8266_ili9341]
-upload_port = COM4      ; Change to the correct port
-monitor_port = COM4     ; Change to the correct port
+monitor_port = COM4       ; Change to the correct port
+upload_port = ${env:d1-mini-esp8266_ili9341.monitor_port}
 
-[env:lolind32pro-lolintft24]
-upload_port = COM3      ; Change to the correct port
-monitor_port = COM3     ; Change to the correct port
+[env:esp32dev-mrb3511]
+monitor_port = COM3       ; Change to the correct port
+upload_port = ${env:esp32dev-mrb3511.monitor_port}
 
 [env:d132-unoshield]
+monitor_port = COM9       ; Change to the correct port
+;upload_port = ${$env:d132-unoshield.monitor_port}
+upload_port = 192.168.4.4 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
-upload_port = 192.168.0.4 ; IP of the ESP
-upload_flags =
-  --port=3232
+upload_flags = --port=3232
 
 [env:ttgo_esp32_poe-lolintft24]
 monitor_port = COM9       ; Change to the correct port
-upload_port = COM9        ; Change to the correct port
-;upload_protocol = espota ; Use ArduinoOTA after flashing over serial
-;upload_port = 10.1.0.130 ; IP of the ESP
-upload_flags =
-  --port=3232
+;upload_port = ${env:ttgo_esp32_poe-lolintft24.monitor_port}
+upload_port = 192.168.4.5 ; IP of the ESP
+upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
+upload_flags = --port=3232
 
-; -- Custom Environment configuration example -----------------
+[env:lolind32pro-lolintft24]
+monitor_port = COM3       ; Change to the correct port
+upload_port = ${env:lolind32pro-lolintft24.monitor_port}
+;endregion
+
+;region -- Custom Environment configuration example -----------------
 [env:my_custom_build]
-platform = espressif32@^2.0.0
+platform = espressif32
 board = nodemcu-32s
-board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
-upload_port = COM3
 monitor_port = COM3
-monitor_filters = esp32_exception_decoder
+upload_port = ${env:my_custom_build.monitor_port}
 debug_tool = esp-prog
 debug_init_break = tbreak setup
-
 build_flags =
     ${esp32.build_flags}
-; -- TFT_eSPI build options -----------------------------------
+;region -- TFT_eSPI build options -----------------------------------
     ${lcd.raspberrypi}
     ${pins.vspi32}
     -D TFT_CS=5
     -D TFT_DC=4
     -D TFT_RST=32
     -D TOUCH_CS=22
+;endregion
 
-lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
+;endregion
