Comment on seperate line

--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -51,7 +51,8 @@ lib_deps =
     ${esp32.lib_deps}
     adafruit/Adafruit GFX Library @ ^1.10.3
     adafruit/Adafruit BusIO @ ^1.6.0
-    https://github.com/netwizeBE/arduino-goodix.git  ; GT911 touch screen driver
+    ; GT911 touch screen driver
+    git+https://github.com/netwizeBE/arduino-goodix.git
 
 lib_ignore =
     ${env.lib_ignore}
