Copy boot partitions

--- a/platformio.ini
+++ b/platformio.ini
@@ -123,6 +123,10 @@ lib_ignore =
 
 lib_deps = LittleFS_esp32
 
+extra_scripts =
+    tools/copy_partitions.py
+
+
 [esp8266]
 build_flags=
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
