--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -41,3 +41,7 @@ lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
 ;endregion
+
+extra_scripts =
+    ${env.extra_scripts}
+    ${esp32.extra_scripts}
