--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -38,4 +38,7 @@ lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
 ;endregion
-    
+
+extra_scripts =
+    ${env.extra_scripts}
+    ${esp32.extra_scripts}
