--- a/platformio.ini
+++ b/platformio.ini
@@ -64,11 +64,11 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bxparks/AceButton @ ^1.7.1         ; GPIO button library
+    bxparks/AceButton @ ^1.8.0         ; GPIO button library
     bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
     bblanchon/StreamUtils @ 1.6.0     ; for EEPromStream
     knolleary/PubSubClient @ ^2.8.0    ; MQTT client
-    git+https://github.com/Bodmer/TFT_eSPI.git   ;  ztest
+    git+https://github.com/Bodmer/TFT_eSPI.git
     git+https://github.com/fvanroie/ConsoleInput.git
     git+https://github.com/andrethomas/TasmotaSlave.git
     git+https://github.com/fvanroie/lv_components.git
