Comment default ports

--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -8,8 +8,8 @@
 [env:nodemcu32s-raspi]
 platform = espressif32 @ ^2.0.0
 board = nodemcu-32s
-upload_port = COM3      ; To change the port, use platform_override.ini
-monitor_port = COM3     ; To change the port, use platform_override.ini
+;upload_port = COM9      ; To change the port, use platform_override.ini
+;monitor_port = COM9     ; To change the port, use platform_override.ini
 monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
 debug_tool = esp-prog
