Switch to lvgl 7.8.1

--- a/platformio.ini
+++ b/platformio.ini
@@ -71,8 +71,8 @@ lib_deps =
     git+https://github.com/Bodmer/TFT_eSPI.git
     git+https://github.com/fvanroie/ConsoleInput.git
     git+https://github.com/andrethomas/TasmotaSlave.git
-    git+https://github.com/fvanroie/lv_components.git
-    git+https://github.com/lvgl/lvgl.git#dev-v8
+    ;git+https://github.com/fvanroie/lv_components.git
+    git+https://github.com/lvgl/lvgl.git
     ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
     ; ------ Unused / Test libraries
