--- a/platformio.ini
+++ b/platformio.ini
@@ -64,10 +64,10 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bxparks/AceButton @ ^1.8.0         ; GPIO button library
-    bblanchon/ArduinoJson @ ^6.17.2    ; Json(l) parser
-    bblanchon/StreamUtils @ 1.6.0      ; for EEPromStream
-    knolleary/PubSubClient @ ^2.8.0    ; MQTT client
+    bxparks/AceButton@^1.8.0         ; GPIO button library
+    bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
+    bblanchon/StreamUtils@1.6.0      ; for EEPromStream
+    knolleary/PubSubClient@^2.8.0    ; MQTT client
     git+https://github.com/Bodmer/TFT_eSPI.git
     git+https://github.com/fvanroie/ConsoleInput.git
     git+https://github.com/andrethomas/TasmotaSlave.git
@@ -82,10 +82,7 @@ lib_deps =
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
 
-; lib_ignore = 
-;     https://github.com/littlevgl/lvgl.git
-
-src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
+src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
 extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
 
@@ -104,22 +101,21 @@ build_flags =
     ;-D USE_DMA_TO_TFT
     ;-D ESP32_DMA                       ; Make touch reads wait for DMA
 ; -- hasp-lvgl build options ------------------------
-    -D HASP_USE_MQTT=1
-    -D HASP_USE_HTTP=1
-    -D HASP_USE_MDNS=1
-    -D HASP_USE_SYSLOG=1
     -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=0
     -D HASP_USE_EEPROM=1
-    -D HASP_USE_GPIO=1
 ; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
 lib_ignore =
     GxTFT
     XPT2046_Touchscreen
-    ESP32 BLE Arduino
+    Adafruit TouchScreen
+    Adafruit BusIO
+    Adafruit GFX Library
+    sstaub/Ticker
+    lv_drv_fsmc_ili9341
 
 lib_deps = LittleFS_esp32
 
@@ -136,21 +132,17 @@ build_flags=
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=16384U           ; 16kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
-    -D HASP_USE_WIFI=1
-    -D HASP_USE_MQTT=1
-    -D HASP_USE_HTTP=1
-    -D HASP_USE_MDNS=1
-    -D HASP_USE_SYSLOG=1
     -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=0
     -D HASP_USE_EEPROM=1
-    -D HASP_USE_GPIO=1
     -D HASP_USE_ETHERNET=0
 
 lib_ignore =
+    ESP32 BLE Arduino
     GxTFT
-    XPT2046_Touchscreen
+    sstaub/Ticker
+    lv_drv_fsmc_ili9341
 
 lib_deps =
 
@@ -167,6 +159,11 @@ build_flags=
     -D HASP_USE_SYSLOG=0            ; Needs UDP
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_LITTLEFS=0
+
+lib_deps =
+    sstaub/Ticker @ ^3.2.0
+    stm32duino/STM32duino LwIP @ ^2.1.2
+    ;https://github.com/stm32duino/LwIP.git
 
 ;***************************************************
 ;          Hardware options
