--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -12,7 +12,8 @@ upload_port = COM1      ; To change the port, use platform_override.ini
 monitor_port = COM1     ; To change the port, use platform_override.ini
 monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
-
+check_tool = cppcheck
+check_flags = --enable=all
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -57,4 +58,6 @@ lib_deps =
 lib_ignore =
     ${env.lib_ignore}
     ; ${esp32.lib_ignore}
+    lv_drv_fsmc_ili9341
+    
 ;endregion
