--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -14,6 +14,8 @@ board = lolin_d32_pro
 ;monitor_port = COM6     ; To change the port, use platform_override.ini
 monitor_filters = esp32_exception_decoder
 board_build.partitions = user_setups/esp32_partition_app1300k_spiffs1216k.csv
+check_tool = cppcheck
+check_flags = --enable=all
 
 build_flags =
     ${env.build_flags}
