--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -75,10 +75,8 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    Ticker@^3.1.5
-    ; STM32duino LwIP@^2.1.2
+    ${stm32f4.lib_deps}
     ; STM32duino STM32Ethernet@^1.0.5
-    https://github.com/stm32duino/LwIP.git
     https://github.com/stm32duino/STM32Ethernet.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
     adafruit/Adafruit GFX Library @ ^1.10.3
