--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -49,11 +49,9 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    sstaub/Ticker @ ^3.2.0
+    ${stm32f4.lib_deps}
     ;Ethernet
-    ; STM32duino LwIP@^2.1.2
     ; STM32duino STM32Ethernet@^1.0.5
-    https://github.com/stm32duino/LwIP.git
     https://github.com/netwizeBE/Ethernet3.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
 
