--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -57,10 +57,9 @@ build_flags =
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
-    sstaub/Ticker @ ^3.2.0
+    ${stm32f4.lib_deps}
     adafruit/Adafruit GFX Library @ ^1.10.3
     adafruit/Adafruit BusIO @ ^1.6.0
-    stm32duino/STM32duino LwIP @ ^2.1.2
     stm32duino/STM32Ethernet @ ^1.2.0
 
 lib_ignore =
