Update SPI bus and TFT_BCKL

--- a/platformio.ini
+++ b/platformio.ini
@@ -122,6 +122,15 @@ lib_deps = LittleFS_esp32
 extra_scripts =
     tools/copy_partitions.py
 
+; -- The ESP32 has 2 SPI Hardware Busses available to use:
+vspi =
+    -D TFT_MISO=19
+    -D TFT_MOSI=23
+    -D TFT_SCLK=18
+hspi =
+    -D TFT_MISO=12
+    -D TFT_MOSI=13
+    -D TFT_SCLK=14
 
 [esp8266]
 build_flags=
@@ -164,20 +173,6 @@ lib_deps =
     sstaub/Ticker @ ^3.2.0
     stm32duino/STM32duino LwIP @ ^2.1.2
     ;https://github.com/stm32duino/LwIP.git
-
-;***************************************************
-;          Hardware options
-;***************************************************
-; -- The SPI Hardware Busses available to use
-[pins]
-vspi32 =
-    -D TFT_MISO=19
-    -D TFT_MOSI=23
-    -D TFT_SCLK=18
-hspi32 =
-    -D TFT_MISO=12
-    -D TFT_MOSI=13
-    -D TFT_SCLK=14
 
 
 ;***************************************************
