--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -21,12 +21,12 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
-    ${pins.vspi32}
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_DC=5
     -D TFT_CS=26 
-    -D TFT_RST=-1  ; RST
-    -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=17 ; (can also be 22 or 16)
+    -D TFT_RST=-1        ; RST
+    -D TFT_BCKL=-1       ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=17       ; (can also be 22 or 16)
 ;endregion
 
 ;region -- Library options -------------------------------
