--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -24,7 +24,7 @@ build_flags =
     -D TFT_ROTATION=${lcd.TFT_ROTATION}
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    ${pins.vspi32}
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TFT_CS=33  ; Chip select control pin
     -D TFT_DC=15  ; Data Command control pin - must use a pin in the range 0-31
