--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -31,12 +31,12 @@ build_flags =
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
     -D USE_HSPI_PORT
-    ${pins.hspi32}
+    ${esp32.hspi}        ; Use HSPI hardware SPI bus
     -D TFT_CS=15
     -D TFT_DC=2
-    -D TFT_RST=-1    ; 3.3v
-    -D TOUCH_CS=0   ; 3   ; RX
-    -D TFT_BCKL=-1
+    -D TFT_RST=-1        ; 3.3v
+    -D TFT_BCKL=-1       ; None, configurable via web UI (e.g. 21)
+    -D TOUCH_CS=0        
 ;endregion
 
 ; -- Debugging options -----------------------------
