--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -25,8 +25,8 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
-    ${pins.vspi32}
-    ; The board already defines the macros for the TFT connector
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
+    ; The board already defines the macros for the TFT connector:
     ;-D TFT_DC=27   ; Defined by board, don't redefine !!
     ;-D TFT_CS=14   ; Defined by board, don't redefine !!
     ;-D TFT_RST=33  ; Defined by board, don't redefine !!
