--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -21,10 +21,11 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.raspberrypi}
-    ${pins.vspi32}
+    ${esp32.vspi}        ; Use VSPI hardware SPI bus
     -D TFT_CS=15
     -D TFT_DC=4
     -D TFT_RST=32
+    -D TFT_BCKL=-1       ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=22
 ;endregion
 
