Fix STM32F4 environments

--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -38,8 +38,8 @@ build_flags =
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D USE_FSMC                     ; Use the onboard FSMC TFT header
-    ;-D USER_SETUP_LOADED=1
+    -D USE_FSMC=                    ; Use the onboard FSMC TFT header
+    ;-D USER_SETUP_LOADED=1         ; TFT_eSPI is not used here
     ;-D TOUCH_CS=PA6 ;NC
     ;-D TFT_RST=-1  ;D4
     ;-D STM32
@@ -76,11 +76,11 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${stm32f4.lib_deps}
-    ; STM32duino STM32Ethernet@^1.0.5
-    https://github.com/stm32duino/STM32Ethernet.git
-    https://github.com/khoih-prog/EthernetWebServer_STM32
+    stm32duino/STM32Ethernet @ ^1.2.0
+    ;https://github.com/stm32duino/STM32Ethernet.git
+    khoih-prog/EthernetWebServer_STM32 @ ^1.1.0
     adafruit/Adafruit GFX Library @ ^1.10.3
-    ;adafruit/Adafruit BusIO @ ^1.6.0
+    adafruit/Adafruit BusIO @ ^1.6.0
     ;https://github.com/ZinggJM/GxTFT.git
     XPT2046_Touchscreen
 
