--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -71,9 +71,9 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${stm32f4.lib_deps}
-    ; STM32duino STM32Ethernet@^1.0.5
-    https://github.com/stm32duino/STM32Ethernet.git
-    https://github.com/khoih-prog/EthernetWebServer_STM32
+    stm32duino/STM32Ethernet @ ^1.2.0
+    ; https://github.com/stm32duino/STM32Ethernet.git
+    khoih-prog/EthernetWebServer_STM32 @ ^1.1.0
 
 lib_ignore =
     GxTFT
