--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -47,3 +47,16 @@ mrb3511 =
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=911 ; GT911 Capacitive touch panel driver
     -D SUPPORT_TRANSACTIONS
+
+st7789 =
+    -D ST7789_DRIVER=1
+    -D CGRAM_OFFSET=1      ; Library will add offsets required
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D SPI_FREQUENCY=25000000
+    -D SPI_TOUCH_FREQUENCY=2500000
+    -D SPI_READ_FREQUENCY=20000000
+    -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive touch panel driver
+    -D SUPPORT_TRANSACTIONS
