--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -23,7 +23,7 @@ lolin24 =
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive touch panel driver
+    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive SPI touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 raspberrypi =
@@ -35,7 +35,7 @@ raspberrypi =
     -D SPI_FREQUENCY=80000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive touch panel driver
+    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive SPI touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 mrb3511 =
@@ -45,7 +45,7 @@ mrb3511 =
     -D TFT_HEIGHT=480
     -D TFT_ROTATION=0 ; see TFT_ROTATION values
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=911 ; GT911 Capacitive touch panel driver
+    -D TOUCH_DRIVER=911 ; GT911 Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 st7789 =
@@ -54,9 +54,21 @@ st7789 =
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=0 ; see TFT_ROTATION values
-    -D SPI_FREQUENCY=25000000
+    -D SPI_FREQUENCY=40000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive touch panel driver
+    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive SPI touch panel driver
+    -D SUPPORT_TRANSACTIONS
+
+
+wireless-tag =
+    -D ST7796_DRIVER=1
+    -D TFT_WIDTH=320
+    -D TFT_HEIGHT=480
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D SPI_FREQUENCY=40000000
+    -D SPI_READ_FREQUENCY=20000000
+    -D USER_SETUP_LOADED=1
+    -D TOUCH_DRIVER=6336 ; FT6336U Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
