--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -20,7 +20,7 @@ build_flags =
     ${esp32.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.st7789}
+    ${lcd.st7789v}
     -D TFT_RST=19        ; FCP pin2 RESET
     -D TFT_CLK=18        ; FCP pin3 SCL
     -D TFT_DC=21         ; FCP pin4 D/C
