working lanbon l8 config

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -21,13 +21,16 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.st7789v}
-    -D TFT_RST=19        ; FCP pin2 RESET
-    -D TFT_CLK=18        ; FCP pin3 SCL
+    -D TFT_RST=18        ; FCP pin2 RESET
+    -D TFT_SCLK=19       ; FCP pin3 SCL
     -D TFT_DC=21         ; FCP pin4 D/C
     -D TFT_CS=22         ; FCP pin5 CS
     -D TFT_MOSI=23       ; FCP pin6 SDA
     -D TFT_MISO=25       ; FCP pin7 SDO
     -D TFT_BCKL=5
+    ;CONFIG_LVGL_TOUCH_SCL_GPIO=0
+    ;CONFIG_LVGL_TOUCH_SDA_GPIO=4
+    ;-D TOUCH_CS=22
     ;CONFIG_LVGL_TOUCH_SCL_GPIO=0
     ;CONFIG_LVGL_TOUCH_SDA_GPIO=4
     ;-D TOUCH_CS=22
