Update Lanbon L8 config

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -1,8 +1,8 @@
 ;***************************************************;
-;          Lanbon L8 Switch with ILI9341 TFT 2.4"   ;
+;          Lanbon L8 Switch with ST7789V TFT 2.4"   ;
 ;               - Custom ESP32 pcb                  ;
-;               - ili9341 TFT                       ;
-;               - ? touch controller          ;
+;               - ST7789V TFT                       ;
+;               - FT6336U touch controller          ;
 ;***************************************************;
 
 [env:lanbon_l8]
