--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -50,17 +50,19 @@ mrb3511 =
 
 st7789v =
     -D ST7789_DRIVER=1
-    ;-D CGRAM_OFFSET=1        ; Library will add offsets required, only for 240x240
-    -D TFT_SDA_READ           ; Read from display, it only provides an SDA pin
+    ;-D CGRAM_OFFSET=1         ; Library will add offsets required
+    -D TFT_SDA_READ            ; Read from display, it only provides an SDA pin
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D TFT_ROTATION=2         ; see TFT_ROTATION values
-    -D TFT_RGB_ORDER=TFT_RGB  ; Colour order Red-Green-Blue
+    -D TFT_ROTATION=2          ; see TFT_ROTATION values
+    -D TFT_INVERSION_ON        ; for inverted colors or OFF
+    ; -D TFT_INVERSION_OFF     ; for normal colors
+    -D TFT_RGB_ORDER=TFT_RGB   ; Colour order Red-Green-Blue
     ; -D TFT_RGB_ORDER=TFT_BGR ; Colour order Blue-Green-Red
     -D SPI_FREQUENCY=80000000
     -D SPI_READ_FREQUENCY=6000000 
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=6336      ; FT6336U Capacitive I2C touch panel driver
+    -D TOUCH_DRIVER=6336       ; FT6336U Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 wireless-tag =
