Disable ota for STM32F4

--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -33,6 +33,7 @@ build_flags =
     -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
     -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D HASP_USE_TASMOTA_SLAVE=1
+    -D HASP_USE_OTA=0
     -D HASP_USE_ETHERNET=1
 ;endregion
 
