--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_parallel.ini
@@ -48,6 +48,7 @@ build_flags =
     -D HASP_INPUT_PIN=PE4 ; User Button K0 on MCUDev Black board
     -D HASP_USE_HTTP=0
     -D HASP_USE_MQTT=1
+    -D HASP_USE_OTA=0
 ;endregion
 
 ;region -- Debugging options -----------------------------
