Update touch screen config

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -28,15 +28,20 @@ build_flags =
     -D TFT_MOSI=23       ; FCP pin6 SDA
     -D TFT_MISO=25       ; FCP pin7 SDO
     -D TFT_BCKL=5
-    ;CONFIG_LVGL_TOUCH_SCL_GPIO=0
-    ;CONFIG_LVGL_TOUCH_SDA_GPIO=4
-    ;-D TOUCH_CS=22
+    -D TOUCH_DRIVER=6336
+    -D TOUCH_SDA=4
+    -D TOUCH_SCL=0
+    -D TOUCH_IRQ=-1   ; use 34-39 as these are input only pins
+    -D TOUCH_RST=-1   ; not used, connected to 3.3V
+    -D USE_TFT_ESPI=1
 ;endregion
 
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
+    ;git+https://github.com/lvgl/lvgl_esp32_drivers.git
+    git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
     ${env.lib_ignore}
