--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -47,6 +47,7 @@ mrb3511 =
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=911 ; GT911 Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
+    -D I2C_TOUCH_FREQUENCY=400000
 
 st7789v =
     -D ST7789_DRIVER=1
@@ -64,6 +65,7 @@ st7789v =
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=6336       ; FT6336U Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
+    -D I2C_TOUCH_FREQUENCY=400000
 
 wireless-tag =
     -D ST7796_DRIVER=1
@@ -75,3 +77,4 @@ wireless-tag =
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=6336 ; FT6336U Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
+    -D I2C_TOUCH_FREQUENCY=400000
