--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -56,10 +56,10 @@ st7789v =
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=2          ; see TFT_ROTATION values
-    -D TFT_INVERSION_ON        ; for inverted colors or OFF
-    ; -D TFT_INVERSION_OFF     ; for normal colors
-    -D TFT_RGB_ORDER=TFT_RGB   ; Colour order Red-Green-Blue
-    ; -D TFT_RGB_ORDER=TFT_BGR ; Colour order Blue-Green-Red
+    ; -D TFT_INVERSION_ON        ; for inverted colors or OFF
+    -D TFT_INVERSION_OFF     ; for normal colors
+    ; -D TFT_RGB_ORDER=TFT_RGB   ; Colour order Red-Green-Blue
+    -D TFT_RGB_ORDER=TFT_BGR ; Colour order Blue-Green-Red
     -D SPI_FREQUENCY=80000000
     -D SPI_READ_FREQUENCY=6000000 
     -D USER_SETUP_LOADED=1
