--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -31,9 +31,12 @@ build_flags =
     -D TOUCH_DRIVER=6336
     -D TOUCH_SDA=4
     -D TOUCH_SCL=0
-    -D TOUCH_IRQ=-1   ; use 34-39 as these are input only pins
-    -D TOUCH_RST=-1   ; not used, connected to 3.3V
+    -D TOUCH_IRQ=-1   ; not connected
+    -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
     -D USE_TFT_ESPI=1
+    ;-D LED_RED=26
+    ;-D LED_GREEN=32
+    ;-D LED_BLUE=33
 ;endregion
 
 ;region -- Library options -------------------------------
