Add LwIP options

--- a/platformio.ini
+++ b/platformio.ini
@@ -139,6 +139,9 @@ build_flags=
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
     -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
+; -- lwIP Variant -----------------------------------
+    ;-D PIO_FRAMEWORK_ARDUINO_LWIP2_HIGHER_BANDWIDTH
+    -D PIO_FRAMEWORK_ARDUINO_LWIP2_LOW_MEMORY
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
