--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -28,11 +28,12 @@ build_flags =
     -D TFT_MOSI=23       ; FCP pin6 SDA
     -D TFT_MISO=25       ; FCP pin7 SDO
     -D TFT_BCKL=5
-    -D TOUCH_DRIVER=6336
+    -D TOUCH_DRIVER=5206
     -D TOUCH_SDA=4
     -D TOUCH_SCL=0
     -D TOUCH_IRQ=-1   ; not connected
     -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
+    -D TOUCH_FREQUENCY=400000
     -D USE_TFT_ESPI=1
     ;-D LED_RED=26
     ;-D LED_GREEN=32
