--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -23,7 +23,8 @@ lolin24 =
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=2046 ; XPT2046 Resistive SPI touch panel driver
+    ;-D TOUCH_DRIVER=0x2046B ; Alternate
+    -D TOUCH_DRIVER=2046     ; XPT2046 Resistive SPI touch panel driver
     -D SUPPORT_TRANSACTIONS
 
 raspberrypi =
@@ -63,9 +64,8 @@ st7789v =
     -D SPI_FREQUENCY=80000000
     -D SPI_READ_FREQUENCY=6000000 
     -D USER_SETUP_LOADED=1
-    -D TOUCH_DRIVER=6336       ; FT6336U Capacitive I2C touch panel driver
+    ;-D TOUCH_DRIVER=6336       ; FT6336U Capacitive I2C touch panel driver
     -D SUPPORT_TRANSACTIONS
-    -D I2C_TOUCH_FREQUENCY=400000
 
 wireless-tag =
     -D ST7796_DRIVER=1
