--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -37,7 +37,7 @@ jobs:
       run: |
         cat platformio_override.ini
     - name: Run PlatformIO
-      run: pio run -e d1-mini-esp32_ili9341 -e d1-mini-esp8266_ili9341
+      run: pio run -e d1-mini-esp32_ili9341 -e lanbon_l8 -e d1-mini-esp8266_ili9341
     - name: Upload output file
       uses: actions/upload-artifact@v2
       with:
