add WT32-SC01 gpio's

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -27,6 +27,8 @@ extra_default_envs =
     ; d132-unoshield
     ; nodemcu32s-raspi
     ; esp32dev-ili9488
+    ; lanbon_l8
+    ; wt32-sc01
     ; my_custom_build
 ;endregion
 
