fixed env names

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -5,7 +5,7 @@
 ;               - FT6336U touch controller          ;
 ;***************************************************;
 
-[env:sc01]
+[env:wt32-sc01]
 platform = espressif32
 platform_packages = framework-arduinoespressif32
 framework = arduino
@@ -20,7 +20,7 @@ build_flags =
     ${esp32.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.sc01}
+    ${lcd.wt32-sc01}
     -D TFT_RST=22
     -D TFT_SCLK=14
     -D TFT_DC=21
