Update config for WT32-SC01, Lanbon L8 and M5Stack

--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -2,7 +2,7 @@
 ;          Lanbon L8 Switch with ST7789V TFT 2.4"   ;
 ;               - Custom ESP32 pcb                  ;
 ;               - ST7789V TFT                       ;
-;               - FT6336U touch controller          ;
+;               - FT5206 touch controller           ;
 ;***************************************************;
 
 [env:lanbon_l8]
