--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -27,6 +27,18 @@ lolin24 =
     -D TOUCH_DRIVER=2046     ; XPT2046 Resistive SPI touch panel driver
     -D SUPPORT_TRANSACTIONS
 
+m5stack =
+    -D M5STACK   ; For AXP192 and TFT_eSPI
+    -D ILI9341_DRIVER=1
+    -D TFT_INVERSION_ON        ; for inverted colors
+    -D TFT_WIDTH=240
+    -D TFT_HEIGHT=320
+    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D SPI_FREQUENCY=80000000
+    -D SPI_READ_FREQUENCY=16000000
+    -D USER_SETUP_LOADED=1
+    -D SUPPORT_TRANSACTIONS
+
 raspberrypi =
     -D RPI_DISPLAY_TYPE=1
     -D ST7796_DRIVER=1
