--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -1,11 +1,11 @@
 ;***************************************************;
-;     Wireless-Tag WT32-SC01 dev board & display    ;
+;     M5Stack Core2 with integrated touch display   ;
 ;               - Custom ESP32 pcb                  ;
-;               - ST7789V TFT                       ;
+;               - ILI9342C TFT                      ;
 ;               - FT6336U touch controller          ;
 ;***************************************************;
 
-[env:wt32-sc01]
+[env:m5stack-core2]
 platform = espressif32
 platform_packages = framework-arduinoespressif32
 framework = arduino
@@ -20,28 +20,27 @@ build_flags =
     ${esp32.build_flags}
 
 ;region -- TFT_eSPI build options ------------------------
-    ${lcd.wt32-sc01}
-    -D TFT_RST=22
-    -D TFT_SCLK=14
-    -D TFT_DC=21
-    -D TFT_CS=15
-    -D TFT_MOSI=13
-    -D TFT_MISO=-1
-    -D TFT_BCKL=23
-    ; -D TOUCH_DRIVER=5206
-    ; -D TOUCH_SDA=30 // correct port, commented because touch crashes
-    ; -D TOUCH_SCL=31 // correct port, commented because touch crashes
-    ; -D TOUCH_IRQ=-1   ; not connected
-    ; -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
-    ; -D TOUCH_FREQUENCY=400000
-    ; -D USE_TFT_ESPI=1
+    ${lcd.m5stack}
+    -D TFT_RST=-1    ; Managed by AXP_IO4
+    -D TFT_SCLK=18
+    -D TFT_DC=15
+    -D TFT_CS=5
+    -D TFT_MOSI=23
+    -D TFT_MISO=38
+    -D TFT_BCKL=-1    ; Managed by AXP_DC3 & AXP_LDO2
+    -D TOUCH_DRIVER=6336
+    -D TOUCH_SDA=21
+    -D TOUCH_SCL=22
+    -D TOUCH_IRQ=39
+    -D TOUCH_RST=-1   ; Managed by AXP_IO4
+    -D TOUCH_FREQUENCY=400000
+    -D USE_TFT_ESPI=1
 ;endregion
 
 ;region -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ;git+https://github.com/lvgl/lvgl_esp32_drivers.git
     git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
