Fix M5Stack core2 touch and display settings

--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -34,7 +34,7 @@ m5stack =
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=0 ; see TFT_ROTATION values
-    -D SPI_FREQUENCY=80000000
+    -D SPI_FREQUENCY=60000000  ; can't handle 80 Mhz
     -D SPI_READ_FREQUENCY=16000000
     -D USER_SETUP_LOADED=1
     -D SUPPORT_TRANSACTIONS
