Add HASP_CONSOLE_BUFFER define

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,6 +94,7 @@ build_flags =
 	-D PIOENV=${PIOENV} 
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+    -D HASP_CONSOLE_BUFFER=220      ; maximum length of a console/telnet command
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
@@ -137,6 +138,7 @@ hspi =
 build_flags=
     -D HTTP_UPLOAD_BUFLEN=640       ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024    ; longer PubSubClient messages
+    -D HASP_CONSOLE_BUFFER=220      ; maximum length of a console/telnet command
     -D ATOMIC_FS_UPDATE             ; enabled compressed ota updates
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lwIP Variant -----------------------------------
@@ -164,6 +166,7 @@ lib_deps =
 build_flags=
     -I include/stm32f4
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+    -D HASP_CONSOLE_BUFFER=220      ; maximum length of a console/telnet command
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
     -D ICACHE_RAM_ATTR=
     -D STM32
