--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -28,12 +28,12 @@ build_flags =
     -D TFT_MOSI=13
     -D TFT_MISO=-1
     -D TFT_BCKL=23
-    ; -D TOUCH_DRIVER=5206
-    ; -D TOUCH_SDA=30 // correct port, commented because touch crashes
-    ; -D TOUCH_SCL=31 // correct port, commented because touch crashes
-    ; -D TOUCH_IRQ=-1   ; not connected
-    ; -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
-    ; -D TOUCH_FREQUENCY=400000
+    -D TOUCH_DRIVER=6336
+    -D TOUCH_SDA=18
+    -D TOUCH_SCL=19
+    -D TOUCH_IRQ=-1   ; not connected
+    -D TOUCH_RST=-1   ; not used, connected to 3.3V
+    -D TOUCH_FREQUENCY=400000
     ; -D USE_TFT_ESPI=1
 ;endregion
 
