Add board revision

--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -1,6 +1,6 @@
 ;***************************************************;
 ;     Wireless-Tag WT32-SC01 dev board & display    ;
-;               - Custom ESP32 pcb                  ;
+;               - Custom ESP32 V3.2 revision board  ;
 ;               - ST7789V TFT                       ;
 ;               - FT6336U touch controller          ;
 ;***************************************************;
@@ -41,7 +41,6 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     ${esp32.lib_deps}
-    ;git+https://github.com/lvgl/lvgl_esp32_drivers.git
     git+https://github.com/aselectroworks/Arduino-FT6336U.git
 
 lib_ignore =
