USE_TFT_ESPI is not needed

--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -21,7 +21,7 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.m5stack}
-    -D TFT_RST=-1    ; Managed by AXP_IO4
+    ;-D TFT_RST=-1    ; Managed by AXP_IO4
     -D TFT_SCLK=18
     -D TFT_DC=15
     -D TFT_CS=5
@@ -34,7 +34,6 @@ build_flags =
     -D TOUCH_IRQ=39
     -D TOUCH_RST=-1   ; Managed by AXP_IO4
     -D TOUCH_FREQUENCY=400000
-    -D USE_TFT_ESPI=1
 ;endregion
 
 ;region -- Library options -------------------------------
