Use lvgl internal ticker

--- a/platformio.ini
+++ b/platformio.ini
@@ -98,10 +98,8 @@ build_flags =
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=61440U           ; 60kB lvgl memory
-    ;-D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
-    ;-D ESP32_DMA                       ; Make touch reads wait for DMA
 ; -- hasp-lvgl build options ------------------------
     -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
@@ -118,8 +116,11 @@ lib_ignore =
     Adafruit GFX Library
     sstaub/Ticker
     lv_drv_fsmc_ili9341
+    lv_drivers
+    AXP192
 
-lib_deps = LittleFS_esp32
+lib_deps =
+; LittleFS_esp32
 
 extra_scripts =
     tools/copy_partitions.py
@@ -178,7 +179,7 @@ build_flags=
     -D HASP_USE_LITTLEFS=0
 
 lib_deps =
-    sstaub/Ticker @ ^3.2.0
+    ; sstaub/Ticker @ ^3.2.0
     stm32duino/STM32duino LwIP @ ^2.1.2
     ;https://github.com/stm32duino/LwIP.git
 
