--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -50,14 +50,14 @@ monitor_port = COM9       ; Change to the correct port
 ;upload_port = ${$env:d132-unoshield.monitor_port}
 upload_port = 192.168.4.4 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
-upload_flags = --port=3232
+upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
 [env:ttgo_esp32_poe-lolintft24]
 monitor_port = COM9       ; Change to the correct port
 ;upload_port = ${env:ttgo_esp32_poe-lolintft24.monitor_port}
 upload_port = 192.168.4.5 ; IP of the ESP
 upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
-upload_flags = --port=3232
+upload_flags = --port=3232 ; --auth=haspadmin   ; OTA password
 
 [env:lolind32pro-lolintft24]
 monitor_port = COM3       ; Change to the correct port
