Tweak user_setups

--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -21,7 +21,7 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.m5stack}
-    ;-D TFT_RST=-1    ; Managed by AXP_IO4
+    -D TFT_RST=-1    ; Managed by AXP_IO4
     -D TFT_SCLK=18
     -D TFT_DC=15
     -D TFT_CS=5
@@ -44,7 +44,15 @@ lib_deps =
 
 lib_ignore =
     ${env.lib_ignore}
-    ${esp32.lib_ignore}
+    GxTFT
+    XPT2046_Touchscreen
+    Adafruit TouchScreen
+    Adafruit BusIO
+    Adafruit GFX Library
+    sstaub/Ticker
+    lv_drv_fsmc_ili9341
+    lv_drivers
+    ; AXP192  -- needed for M5Stack core2
 ;endregion
 
 extra_scripts =
