--- a/user_setups/lcd_config.ini
+++ b/user_setups/lcd_config.ini
@@ -5,7 +5,7 @@ tft_width = 240       ; default width
 tft_height = 320      ; default height
 
 ; TFT_ROTATION values:
-; 0 - 0 deg
+; 0 - 0 deg (= default when not set)
 ; 1 - 90 deg anti-clockwise (from 0 deg)
 ; 2 - 180 deg anti-clockwise
 ; 3 - 270 deg anti-clockwise
@@ -18,7 +18,7 @@ lolin24 =
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
     -D SPI_FREQUENCY=40000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D SPI_READ_FREQUENCY=20000000
@@ -30,21 +30,21 @@ lolin24 =
 m5stack =
     -D M5STACK   ; For AXP192 and TFT_eSPI
     -D ILI9341_DRIVER=1
-    -D TFT_INVERSION_ON        ; for inverted colors
+    -D INVERT_COLORS=1 ;-D TFT_INVERSION_ON   ; for inverted colors
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    -D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
     -D SPI_FREQUENCY=60000000  ; can't handle 80 Mhz
     -D SPI_READ_FREQUENCY=16000000
     -D USER_SETUP_LOADED=1
-    -D SUPPORT_TRANSACTIONS
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
 
 raspberrypi =
     -D RPI_DISPLAY_TYPE=1
     -D ST7796_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    ;-D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
     -D SPI_FREQUENCY=80000000
     -D SPI_TOUCH_FREQUENCY=2500000
     -D USER_SETUP_LOADED=1
@@ -56,10 +56,10 @@ mrb3511 =
     -D ILI9488_DRIVER=1
     -D TFT_WIDTH=320
     -D TFT_HEIGHT=480
-    -D TFT_ROTATION=0 ; see TFT_ROTATION values
+    ;-D TFT_ROTATION=0 ; Use default, see TFT_ROTATION values
     -D USER_SETUP_LOADED=1
     -D TOUCH_DRIVER=911 ; GT911 Capacitive I2C touch panel driver
-    -D SUPPORT_TRANSACTIONS
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
     -D I2C_TOUCH_FREQUENCY=400000
 
 st7789v =
@@ -69,8 +69,7 @@ st7789v =
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
     -D TFT_ROTATION=2          ; see TFT_ROTATION values
-    ; -D TFT_INVERSION_ON        ; for inverted colors or OFF
-    -D TFT_INVERSION_OFF     ; for normal colors
+    ; -D TFT_INVERSION_OFF     ; for normal colors
     ; -D TFT_RGB_ORDER=TFT_RGB   ; Colour order Red-Green-Blue
     -D TFT_RGB_ORDER=TFT_BGR ; Colour order Blue-Green-Red
     -D SPI_FREQUENCY=80000000
@@ -86,4 +85,4 @@ wt32-sc01 =
     -D TFT_ROTATION=1 ; see TFT_ROTATION values
     -D SPI_FREQUENCY=40000000
     -D USER_SETUP_LOADED=1
-    -D SUPPORT_TRANSACTIONS
+    ;-D SUPPORT_TRANSACTIONS   ; Default on ESP32
