--- a/platformio.ini
+++ b/platformio.ini
@@ -39,10 +39,12 @@ upload_speed = 921600
 monitor_speed = 115200
 
 build_flags =
+	-D PIOENV=${PIOENV} 
+	-D PIOENV_STR=\"${PIOENV}\"
     ;-Os          ; Code Size Optimization
     -Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
-    -D CORE_DEBUG_LEVEL=2           ; 0=Silent, 1=Errors, 2=Warnings
+    -D CORE_DEBUG_LEVEL=0           ; 0=Silent, 1=Errors, 2=Warnings
     -I include    ; include lv_conf.h and hasp_conf.h
     ; -- littlevgl build options ------------------------------
     -D LV_CONF_INCLUDE_SIMPLE       ; for lvgl
@@ -59,7 +61,7 @@ build_flags =
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=3
-    -D HASP_VERSION_REVISION=1
+    -D HASP_VERSION_REVISION=2
     -D HASP_USE_CONFIG=1            ; Native application, not library
 
 ; -- Shared library dependencies in all environments
@@ -91,7 +93,6 @@ extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
 [esp32]
 build_flags =
     ${env.build_flags}
-	-D PIOENV=${PIOENV} 
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D HASP_CONSOLE_BUFFER=220      ; maximum length of a console/telnet command
