--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -21,6 +21,7 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     ${lcd.st7789v}
+    -D LANBONL8
     -D TFT_RST=18        ; FCP pin2 RESET
     -D TFT_SCLK=19       ; FCP pin3 SCL
     -D TFT_DC=21         ; FCP pin4 D/C
@@ -34,9 +35,12 @@ build_flags =
     -D TOUCH_IRQ=-1   ; not connected
     -D TOUCH_RST=-1   ; not used, connected to 3.3V on FCP pin10
     -D TOUCH_FREQUENCY=400000
-    ;-D LED_RED=26
-    ;-D LED_GREEN=32
-    ;-D LED_BLUE=33
+    -D LED_RED=26
+    -D LED_GREEN=32
+    -D LED_BLUE=33
+    -D RELAY_1=12
+    -D RELAY_2=24
+    -D RELAY_3=37
 ;endregion
 
 ;region -- Library options -------------------------------
