Switch to LittleFS

--- a/platformio.ini
+++ b/platformio.ini
@@ -39,8 +39,7 @@ upload_speed = 921600
 monitor_speed = 115200
 
 build_flags =
-	-D PIOENV=${PIOENV} 
-	-D PIOENV_STR=\"${PIOENV}\"
+	-D PIOENV=\"${PIOENV}\"
     ;-Os          ; Code Size Optimization
     -Og           ; Code Debug Optimization
     ;-w           ; Suppress warnings
@@ -55,14 +54,15 @@ build_flags =
     ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
     ;-D DISABLE_LOGGING
-    ${override.build_flags}
-    -D HASP_VERSION_MAJOR=0
-    -D HASP_VERSION_MINOR=3
-    -D HASP_VERSION_REVISION=2
+    -D HASP_VER_MAJ=0
+    -D HASP_VER_MIN=3
+    -D HASP_VER_REV=2
     -D HASP_USE_CONFIG=1            ; Native application, not library
+    ${override.build_flags}
 
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
@@ -71,13 +71,13 @@ lib_deps =
     bblanchon/ArduinoJson@^6.17.2    ; Json(l) parser
     bblanchon/StreamUtils@1.6.0      ; for EEPromStream
     knolleary/PubSubClient@^2.8.0    ; MQTT client
-    git+https://github.com/Bodmer/TFT_eSPI.git
     git+https://github.com/fvanroie/ConsoleInput.git
-    git+https://github.com/andrethomas/TasmotaSlave.git
+    ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/fvanroie/lv_components.git
     git+https://github.com/lvgl/lvgl.git
     ;lvgl/lvgl @ ^7.7.2                 ; from PIO library
     ;bodmer/TFT_eSPI @ 2.3.4           ; Tft SPI drivers EXACT version 2.3.5 has compile error
+    git+https://github.com/Bodmer/TFT_eSPI.git
     ; ------ Unused / Test libraries
     ;https://github.com/netwizeBE/TFT_eSPI.git
     ;Syslog@^2.0.0       ; Obsoleted
@@ -87,7 +87,7 @@ lib_deps =
 
 src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
-extra_scripts = tools/move-rename-firmware.py    ; tools/pre:extra_script.py
+extra_scripts = tools/copy_fw.py    ; tools/pre:extra_script.py
 
 ; -- Platform specific build flags
 [esp32]
@@ -102,10 +102,10 @@ build_flags =
 ; -- tft_espi build options ------------------------
     ;-D USE_DMA_TO_TFT
 ; -- hasp-lvgl build options ------------------------
-    -D HASP_USE_TELNET=1
-    -D HASP_USE_SPIFFS=1
-    -D HASP_USE_LITTLEFS=0
-    -D HASP_USE_EEPROM=1
+    ;-D HASP_USE_TELNET=1
+    ;-D HASP_USE_SPIFFS=1
+    -D HASP_USE_LITTLEFS=1
+    ;-D HASP_USE_EEPROM=1
 ; -- LittleFS build options ------------------------
 	-D CONFIG_LITTLEFS_FOR_IDF_3_2
 
@@ -121,7 +121,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
-; LittleFS_esp32
+    LittleFS_esp32
 
 extra_scripts =
     tools/copy_partitions.py
@@ -149,9 +149,9 @@ build_flags=
 ; -- lvgl build options -----------------------------
     -D LV_MEM_SIZE=10240U           ; 10kB lvgl memory
 ; -- hasp-lvgl build options ------------------------
-    -D HASP_USE_TELNET=1
-    -D HASP_USE_SPIFFS=1
-    -D HASP_USE_LITTLEFS=0
+    ;-D HASP_USE_TELNET=1
+    ;-D HASP_USE_SPIFFS=1
+    -D HASP_USE_LITTLEFS=1
     -D HASP_USE_EEPROM=1
     -D HASP_USE_ETHERNET=0
 
