--- a/test/test_value_str.tavern.yaml
+++ b/test/test_value_str.tavern.yaml
@@ -1,4 +1,4 @@
-# test_page.tavern.yaml
+# test_value_str.tavern.yaml
 ---
 
 test_name: Obj Standard Properties
@@ -53,23 +53,25 @@ marks:
         - ABC
         - huey
         - dewey
+        - ""
 
   - parametrize:
       key: str2
       vals:
         - louie
         - fred
-        - "I danced."
-        - "Oak is strong and also gives shade."
-        - "Cats and dogs each hate the other."
-        - "The pipe began to rust while new."
-        - "Open the crate but don't break the glass."
-        - "Add the sum to the product of these three."
-        - "Thieves who rob friends deserve jail."
-        - "The ripe taste of cheese improves with age."
-        - "Act on these orders with great speed."
-        - "The hog crawled under the high fence."
-        - "Move the vat over the hot fire."
+        - " I danced."
+        - " Oak is strong and also gives shade."
+        - " Cats and dogs each hate the other."
+        - " The pipe began to rust while new."
+        - " Open the crate but don't break the glass."
+        - " Add the sum to the product of these three."
+        - " Thieves who rob friends deserve jail."
+        - " The ripe taste of cheese improves with age."
+        - " Act on these orders with great speed."
+        - " The hog crawled under the high fence."
+        - " Move the vat over the hot fire."
+        - ""
 
 stages:
   - name: Page 1
@@ -82,12 +84,10 @@ stages:
       timeout: 5
     delay_after: 0
 
-
-
   - name: Set value_str
     mqtt_publish:
       topic: hasp/{plate}/command
-      payload: "p[1].b[1].value_str={objid} {str1} {str2}"
+      payload: "p[1].b[1].value_str={str1}{str2}"
     delay_after: 0
   - name: Get value_str
     mqtt_publish:
@@ -96,5 +96,5 @@ stages:
     mqtt_response:
       topic: hasp/{plate}/state/p1b1
       json:
-        value_str: "{objid} {str1} {str2}"
+        value_str: "{str1}{str2}"
       timeout: 5
